# Ignite_1

./: .replit  README.md  app.py  foods.csv  meal_optimizer.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted-Build-me-a-complete-Flask-web-app-called-Smart-Indian-Meal-Planner-Features-1-Inputs-Page--1756027308291_1756027308291.txt  README_1756037623259.md  _1756037623256.env  __init___1756037759578.py  app_1756037623257.py  auth_1756037691802.css  auth_1756037691803.js  bot_1756037664885.html  config_1756037623257.py  forgot-password_1756037664886.html  index_1756037664886.html  models_1756037759578.py  requirements_1756037623259.txt  routes_1756037759579.py  script_1756037691804.js  signin_1756037664887.html  signup_1756037664887.html  style_1756037691805.css  template_config_1756037623260.json  test_gemini_1756037623260.py
static/: auth.css  auth.js  main_script.js  main_style.css  script.js  style.css
templates/: bot.html  forgot-password.html  index.html  main_index.html  meal_planner.html  results.html  signin.html  signup.html
