[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pulp>=3.2.2",
    "reportlab>=4.4.3",
    "werkzeug>=3.1.3",
]
